// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Switch Controlled behaviour 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules | Switch Default Off 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules | Switch Default On 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={true}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules | Switch Disabled 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        disabled={true}
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules | Switch With Label prop as ReactNode 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 dkRrrO"
      >
        Notify me by email
      </span>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;

exports[`Storyshots Molecules | Switch With hidden label 1`] = `
<label
  className="Switch__Label-dtrlro-0 fTdfdO"
>
  <span
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 eJlHQf"
  >
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <div
        className="VisuallyHidden__Hidden-sc-1mwv7fg-0 jHTVpT"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          Notify me by email
        </span>
      </div>
    </span>
    <span
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <button
        aria-checked={false}
        className="NormalizedButton__Button-ey7f5x-0 Switch__Button-dtrlro-4 hsrTzS"
        onClick={[Function]}
        role="switch"
        type="button"
      >
        <div
          className="Switch__ButtonContent-dtrlro-3 kiZmkS"
        >
          <span
            className="Switch__Knob-dtrlro-1 dynvSY"
          />
          <span
            className="Switch__Track-dtrlro-2 gnIMxq"
          />
        </div>
      </button>
    </span>
  </span>
</label>
`;
